# EasiScriptX

./: .gitignore  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  LICENSE.txt  README.md  build.sh  doxyfile  package-lock.json  release.sh
.github/workflows/: cmake.yml
benchmarks/: benchmark.cpp  run_bench.py
cmake/: EasiScriptXConfig.cmake.in
docker/: Dockerfile.cpu  Dockerfile.cuda
docs/: BUILD.md  DOCKER.md  api_reference.md  references.md  syntax.md  tutorials.md
examples/: autonomic.esx  custom_loses.esx  custom_losses.esx  dataset.esx  distributed.esx  llm_optimization.esx  matmul.esx  memory_optimization.esx  model.esx  pattern_recognition.esx  pretrained.esx  train.esx
notebooks/: Quickstart.ipynb
src/: ast.hpp  config.hpp  dataset.hpp  distributed.hpp  energy_monitor.hpp  error_handler.cpp  error_handler.hpp  interpreter.hpp  main.cpp  model.hpp  onnx_export.cpp  onnx_export.hpp  parser.cpp  parser.hpp  printer.hpp  repl.cpp  repl.hpp  runtime.hpp  security.hpp  tensor.hpp
tests/: test_esx.cpp  test_suite.cpp
tools/: esx.py
